[package]
authors = ["Kalle Samuels <ks@ks.ax>"]
description = "robots.txt parser for Rust"
documentation = "https://docs.rs/robotstxt"
homepage = "https://github.com/njaard/robotstxt"
keywords = ["robot", "robots", "parser", "spider", "crawler"]
license = "MIT"
name = "robotstxt"
readme = "README.md"
repository = "https://github.com/njaard/robotstxt"
version = "0.1.0"
edition="2018"

[dependencies]
url = "1"
